# finalproject_Bialkovskii_M255-25

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  scheduler.py  test.cast
data/: portfolios.json  rates.json  users.json
valutetrade_hub/: config.json  decorators.py  logging_config.py
valutetrade_hub/cli/: interface.py
valutetrade_hub/core/: currencies.py  exceptions.py  models.py  usecases.py
valutetrade_hub/infra/: database.py  settings.py
valutetrade_hub/parser_service/: api_clients.py  config.py  scheduler.py  storage.py  updater.py
